--- a/hexo_circle_of_friends/fc_settings.yaml
+++ b/hexo_circle_of_friends/fc_settings.yaml
@@ -15,7 +15,11 @@
 #   - stellar：stellar主题
 # 支持配置多个友链页面并指定不同主题策略，每个用{}分隔，它们会被同时爬取，数据保存在一起。
 LINK: [
-     { link: "https://blog.bornforthis.cn/link/", theme: "common2" },  # 友链页地址1，修改为你的友链页地址
+     { link: "https://carolbicsi.zeabur.app/link/", theme: "butterfly" },
+     { link: "https://carolbicsi.vercel.app/link/", theme: "butterfly" },
+     { link: "https://carolbicsi.pages.dev/link/", theme: "butterfly" },
+     { link: "https://carolbicusi.netlify.app/link/", theme: "butterfly" },
+     { link: "https://carolbicsi.github.io/link/", theme: "butterfly" },
     #  { link: "https://blog.class1v1.com/link/", theme: "common2" }, # 友链页地址2
 #     { link: "https://immmmm.com/about/", theme: "common1" }, # 友链页地址3
 #     ...
