--- a/hexo_circle_of_friends/fc_settings.yaml
+++ b/hexo_circle_of_friends/fc_settings.yaml
@@ -21,6 +21,7 @@ LINK: [
      { link: "https://carolbicusi.netlify.app/link/", theme: "butterfly" },
      { link: "https://carolbicsi.github.io/link/", theme: "butterfly" },
      { link: "https://uuanqin.top/pages/friends/", theme: "butterfly" },
+     { link: "https://www.zlog.us.kg/link/", theme: "butterfly" },
     #  { link: "https://blog.class1v1.com/link/", theme: "common2" }, # 友链页地址2
 #     { link: "https://immmmm.com/about/", theme: "common1" }, # 友链页地址3
 #     ...
